Améliore la page d'accueil

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="cours.html">Cours</a></li>
+                <li><a href="cours.html">Cours &amp; Ressources</a></li>
                 <li><a href="team.html">Équipe</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -20,14 +20,36 @@
     </header>
 
     <main>
-        <h1>Bienvenue sur notre site</h1>
+        <section class="hero">
+            <h1>Réussir les concours avec PrepaSuccess</h1>
+            <p>Accompagnement sur mesure pour les élèves de prépa scientifiques</p>
+            <a class="btn" href="cours.html">Découvrir les cours</a>
+        </section>
+
+        <section class="mission">
+            <h2>Notre mission</h2>
+            <p>Chez PrepaSuccess, nous mettons tout en œuvre pour accompagner chaque
+                étudiant dans la préparation de ses concours d’entrée aux grandes
+                écoles.</p>
+        </section>
+
+        <section class="valeurs">
+            <h2>Nos valeurs</h2>
+            <ul>
+                <li>Excellence</li>
+                <li>Accessibilité</li>
+                <li>Flexibilité</li>
+                <li>Honnêteté</li>
+                <li>Solidarité</li>
+            </ul>
+        </section>
     </main>
 
     <footer>
         <ul>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Politique de confidentialité</a></li>
             <li><a href="#">CGU</a></li>
+            <li><a href="#">Politique de confidentialité</a></li>
             <li><a href="https://instagram.com" target="_blank" rel="noopener">Instagram</a></li>
         </ul>
     </footer>
