--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -43,6 +44,32 @@
                 <li>Honnêteté</li>
                 <li>Solidarité</li>
             </ul>
+        </section>
+
+        <section class="pourquoi">
+            <h2>Pourquoi nous choisir</h2>
+            <div class="cards">
+                <div class="card">
+                    <i class="fa-solid fa-user-graduate fa-2x" aria-hidden="true"></i>
+                    <h3>Encadrement par des élèves de grandes écoles</h3>
+                    <p>Préparé par ceux qui ont déjà réussi.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-heart fa-2x" aria-hidden="true"></i>
+                    <h3>Accompagnement humain et motivant</h3>
+                    <p>Un suivi personnalisé pour garder la motivation.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-lightbulb fa-2x" aria-hidden="true"></i>
+                    <h3>Méthodologie claire et adaptée à la prépa</h3>
+                    <p>Des méthodes conçues pour réussir les concours.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-laptop fa-2x" aria-hidden="true"></i>
+                    <h3>Plateforme 100% en ligne et accessible</h3>
+                    <p>Travaillez où vous voulez, quand vous voulez.</p>
+                </div>
+            </div>
         </section>
     </main>
 
