Add services section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,42 @@
                 </div>
             </div>
         </section>
+
+        <section class="services">
+            <h2>Nos services</h2>
+            <div class="service-cards">
+                <div class="service-card">
+                    <i class="fa-solid fa-laptop-code fa-2x" aria-hidden="true"></i>
+                    <h3>Cours en ligne interactifs</h3>
+                    <p>Des leçons dynamiques avec exercices en temps réel.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fa-solid fa-file-lines fa-2x" aria-hidden="true"></i>
+                    <h3>Devoirs corrigés par des anciens</h3>
+                    <p>Recevez des corrections détaillées pour progresser.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fa-solid fa-user-check fa-2x" aria-hidden="true"></i>
+                    <h3>Suivi individuel chaque semaine</h3>
+                    <p>Un tuteur dédié pour suivre vos avancées.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fa-regular fa-circle-question fa-2x" aria-hidden="true"></i>
+                    <h3>Sessions de questions/réponses</h3>
+                    <p>Un temps régulier pour lever vos bloquages.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fa-solid fa-book-open fa-2x" aria-hidden="true"></i>
+                    <h3>Fiches méthodes et entraînement</h3>
+                    <p>Consolidez vos connaissances avec nos fiches.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fa-solid fa-compass fa-2x" aria-hidden="true"></i>
+                    <h3>Conseils orientation écoles</h3>
+                    <p>Nos experts vous guident vers les écoles qui vous correspondent.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
