Améliore la section Hero

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
     <main>
         <section class="hero">
-            <h1>Réussir les concours avec PrepaSuccess</h1>
-            <p>Accompagnement sur mesure pour les élèves de prépa scientifiques</p>
-            <a class="btn" href="cours.html">Découvrir les cours</a>
+            <h1>PrepaSuccess</h1>
+            <p>Vous accompagner avec efficacité, flexibilité et bienveillance vers la réussite des concours les plus exigeants.</p>
+            <a class="btn" href="#mission">Commencer maintenant</a>
         </section>
 
-        <section class="mission">
+        <section id="mission" class="mission">
             <h2>Notre mission</h2>
             <p>Chez PrepaSuccess, nous mettons tout en œuvre pour accompagner chaque
                 étudiant dans la préparation de ses concours d’entrée aux grandes
