Add mission section

--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
             <a class="btn" href="#mission">Commencer maintenant</a>
         </section>
 
-        <section id="mission" class="mission">
+        <section id="mission" class="mission-section">
             <h2>Notre mission</h2>
-            <p>Chez PrepaSuccess, nous mettons tout en œuvre pour accompagner chaque
-                étudiant dans la préparation de ses concours d’entrée aux grandes
-                écoles.</p>
+            <p>Vous accompagner avec efficacité, flexibilité et bienveillance vers la
+                réussite des concours les plus exigeants.</p>
         </section>
 
         <section class="valeurs">
