Add 'Qui sommes-nous' section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 réussite des concours les plus exigeants.</p>
         </section>
 
+        <section class="qui-sommes-nous">
+            <h2>Qui sommes-nous ?</h2>
+            <p>Une équipe d’anciens élèves (des ex-lydexiens) de prépa ayant intégré les meilleures grandes écoles cette année (X-Polytechnique, Centrale, Mines, les meilleures écoles de CCINP (ENSIMAG et ENSEEIHT), etc.).</p>
+        </section>
+
         <section class="valeurs">
             <h2>Nos valeurs</h2>
             <ul>
