Add Cours section with pricing and flexible options

--- a/index.html
+++ b/index.html
@@ -111,6 +111,54 @@
                 </div>
             </div>
         </section>
+
+        <section class="cours">
+            <h2>Cours</h2>
+            <p class="subtitle">Des formats de cours adaptés à vos besoins :</p>
+            <div class="cours-grid">
+                <div class="cours-item">
+                    <span>Séance de groupe</span>
+                    <span>8-10 étudiants</span>
+                    <span>50 MAD/h</span>
+                </div>
+                <div class="cours-item">
+                    <span>Séance de groupe fermé</span>
+                    <span>4 étudiants</span>
+                    <span>100 MAD/h</span>
+                </div>
+                <div class="cours-item">
+                    <span>Séance duo</span>
+                    <span>2 étudiants</span>
+                    <span>150 MAD/h</span>
+                </div>
+                <div class="cours-item">
+                    <span>Séance individuelle</span>
+                    <span>1 étudiant</span>
+                    <span>200 MAD/h</span>
+                </div>
+            </div>
+
+            <div class="rythme">
+                <h3>Un rythme adapté à vos objectifs :</h3>
+                <ul>
+                    <li>Séances standards : CNC et CCINP</li>
+                    <li>Séances avancées : Mines-Ponts / Centrale</li>
+                    <li>Séances très avancées : X et ENS</li>
+                </ul>
+            </div>
+
+            <div class="flexible">
+                <h3>Choisissez uniquement les chapitres à travailler</h3>
+            </div>
+
+            <div class="liberte">
+                <h3>Liberté totale :</h3>
+                <ul>
+                    <li>Réservez une séance selon votre emploi du temps</li>
+                    <li>Adaptez la fréquence selon vos objectifs</li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <footer>
