Add section-content utility for centered layout

--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero section-content">
             <h1>PrepaSuccess</h1>
             <p>Vous accompagner avec efficacité, flexibilité et bienveillance vers la réussite des concours les plus exigeants.</p>
             <a class="btn" href="#mission">Commencer maintenant</a>
         </section>
 
-        <section id="mission" class="mission-section">
+        <section id="mission" class="mission-section section-content">
             <h2>Notre mission</h2>
             <p>Vous accompagner avec efficacité, flexibilité et bienveillance vers la
                 réussite des concours les plus exigeants.</p>
         </section>
 
-        <section class="qui-sommes-nous">
+        <section class="qui-sommes-nous section-content">
             <h2>Qui sommes-nous ?</h2>
             <p>Une équipe d’anciens élèves (des ex-lydexiens) de prépa ayant intégré les meilleures grandes écoles cette année (X-Polytechnique, Centrale, Mines, les meilleures écoles de CCINP (ENSIMAG et ENSEEIHT), etc.).</p>
         </section>
 
-        <section class="valeurs">
+        <section class="valeurs section-content">
             <h2>Nos valeurs</h2>
             <ul>
                 <li>Excellence</li>
@@ -50,7 +50,7 @@
             </ul>
         </section>
 
-        <section class="pourquoi">
+        <section class="pourquoi section-content">
             <h2>Pourquoi nous choisir</h2>
             <div class="cards">
                 <div class="card">
@@ -76,7 +76,7 @@
             </div>
         </section>
 
-        <section class="services">
+        <section class="services section-content">
             <h2>Nos services</h2>
             <div class="service-cards">
                 <div class="service-card">
@@ -112,7 +112,7 @@
             </div>
         </section>
 
-        <section class="cours">
+        <section class="cours section-content">
             <h2>Cours</h2>
             <p class="subtitle">Des formats de cours adaptés à vos besoins :</p>
             <div class="cours-grid">
