--- a/projet.html
+++ b/projet.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-        <section class="projet-section">
+        <section class="projet-section section-content">
             <h1>Pourquoi ce projet ?</h1>
             <p>Nous savons à quel point la classe préparatoire est une période intense, où la pression et les exigences peuvent parfois sembler insurmontables.</p>
             <p>C’est pourquoi nous avons créé PrepaSuccess, un projet conçu par des étudiants qui ont traversé les mêmes défis que vous et qui en sont sortis gagnants.</p>
