Add slogan section at page end

--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
                 </ul>
             </div>
         </section>
+
+        <section class="slogan-section section-content">
+            <p><em>Votre réussite, Notre mission</em></p>
+        </section>
     </main>
 
     <footer>
